<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.westboy.databridge</groupId>
    <artifactId>databridge</artifactId>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>core</module>
        <module>plugin</module>
    </modules>

    <version>1.0-SNAPSHOT</version>
    <name>databridge</name>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <lombok.version>1.18.24</lombok.version>
        <mysql.driver.version>8.0.28</mysql.driver.version>
        <hutool.version>5.8.11</hutool.version>
        <junit-jupiter.version>5.8.1</junit-jupiter.version>
        <logback.version>1.2.11</logback.version>
        <commons-lang3-version>3.3.2</commons-lang3-version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.westboy.databridge</groupId>
                <artifactId>common</artifactId>
                <version>${version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.driver.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3-version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
